force-app/main/default/objects/Visit_Outcome__c/Visit_Outcome__c.object-meta.xml
<CustomObject>
    <label>Visit Outcome</label>
    <pluralLabel>Visit Outcomes</pluralLabel>
    <description>Visit Outcome</description>
    <nameField>
        <label>Visit Outcome Name</label>
        <type>AutoNumber</type>
        <displayFormat>VOUT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>