force-app/main/default/objects/Visit_Outcome__c/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <label>Next Action Date</label>
    <type>Date</type>
    <description>Next Action Date</description>
</CustomField>