force-app/main/default/objects/Visit_Outcome__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <description>Result</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
                <default>true</default>
                <label>Converted</label>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Reassign</fullName>
            </value>
            <value>
                <fullName>Not_Interested</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>