force-app/main/default/objects/Visit_Outcome__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>MasterDetail</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Visit</description>
</CustomField>